--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 body {
-font-family: -apple-system, BlinkMacSystemFont,
- “Segoe UI”, “Roboto”, “Oxygen”,
- “Ubuntu”, “Cantarell”, “Fira Sans”,
- “Droid Sans”, “Helvetica Neue”, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    “Segoe UI”,
+    “Roboto”,
+    “Oxygen”,
+    “Ubuntu”,
+    “Cantarell”,
+    “Fira Sans”,
+    “Droid Sans”,
+    “Helvetica Neue”,
+    sans-serif;
 }
 
 .container {
